fix text wrap on total

--- a/index.css
+++ b/index.css
@@ -39,6 +39,7 @@ body {
   display: flex;
   justify-content: space-evenly;
   width: 100%;
+  white-space: nowrap;
   font-size: 24px;
 }
 
